[package]
name = "thumbtaro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.0-beta.15"
actix-service = "2.0.2"
actix-web = "4.0.0-beta.21"
cloud-storage = "0.11.0"
dotenv = "0.15.0"
env_logger = "0.9.0"
image = "0.23.14"
tracing = "0.1.29"
tracing-subscriber = "0.3.6"

[dev-dependencies]
actix-rt = "2.6.0"
